# contribution-bar

./: .gitignore  Cargo.toml  LICENSE.md  README.md
.github/workflows/: create-release.yml  release-macos-aarch64.yml  release-macos-x86_64.yml
assets/: icon.icns  info.plist
src/: gitea.rs  github.rs  image.rs  main.rs
